module12/service.yaml
apiVersion: v1
kind: Service
metadata: 
  annotations:
    prometheus.io/port: "80"  # 程序监听的端口
    prometheus.io/scrape: "true"
  labels:
    app: httpserver
  name: httpserversvc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver
  # type: LoadBalancer
