module12/httpgw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
  namespace: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - bbtgo.yunyuansheng.xyz
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      credentialName: bbtgo-yunyuansheng-xyz-tls
      mode: SIMPLE
