module12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-prod-dns
  name: httpserver-80
spec:  
  ingressClassName: nginx  
  rules:    
    - host: bbtgo.51.cafe      
      http:        
        paths:          
          - backend:              
              service:                
                name: httpsvc                
                port:                  
                  number: 80            
            path: /            
            pathType: Prefix
  # tls:
  #   - hosts:
  #       - bbtgo.51.cafe
  #     secretName: bbtgo-tls
