module12/virtualserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
  namespace: httpserver
spec:
  gateways:
  - httpsserver
  hosts:
  - bbtgo.yunyuansheng.xyz
  http:
  - route:
    - destination:
        host: httpserver.httpserver.svc.cluster.local
        port:
          number: 80
